--- a/_posts/browser.mdx
+++ b/_posts/browser.mdx
@@ -62,21 +62,21 @@ titleImage: /assets/postIcon/javascript.png
 
 여기서 브라우저가 60FPS 아래로 그리게 된다면 쟁크 현상이 발생함.
 
-<img src="https://wonbeenna.github.io/blog/javaScript/web-optimization6.png" width="100%" alt="bundle-analyzer"/>
+<img src="/assets/blog/javaScript/web-optimization6.png" width="100%" alt="web-optimization"/>
 
 1. DOM + CSSOM
 
-<img src="https://wonbeenna.github.io/blog/javaScript/web-optimization7.png" width="100%" alt="bundle-analyzer"/>
+<img src="/assets/blog/javaScript/web-optimization7.png" width="100%" alt="web-optimization"/>
 
 1. Render Tree
 
-<img src="https://wonbeenna.github.io/blog/javaScript/web-optimization8.png" width="100%" alt="bundle-analyzer"/>
+<img src="/assets/blog/javaScript/web-optimization8.png" width="100%" alt="web-optimization"/>
 
 위 DOM과 CSSOM을 조합해 RenderTree를 만들어 낸다.
 
 1. Layout
 
-<img src="https://wonbeenna.github.io/blog/javaScript/web-optimization9.png" width="100%" alt="bundle-analyzer"/>
+<img src="/assets/blog/javaScript/web-optimization9.png" width="100%" alt="web-optimization"/>
 
 위치나 크기를 계산해 화면에 레이아웃을 그린다.
 
@@ -86,7 +86,7 @@ titleImage: /assets/postIcon/javascript.png
 
 1. Composite
 
-<img src="https://wonbeenna.github.io/blog/javaScript/web-optimization10.png" width="100%" height="350" alt="bundle-analyzer"/>
+<img src="/assets/blog/javaScript/web-optimization10.png" width="100%" height="350" alt="web-optimization"/>
 
 각 레이어들을 합성하는 과정
 
