post: next-blog

--- a/_posts/next-bundle-analyzer.mdx
+++ b/_posts/next-bundle-analyzer.mdx
@@ -3,7 +3,7 @@ title: next/bundle-analyzer
 date: 2022-02-22
 description: next/bundle-analyzer로 번들 크기 확인하기
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/Nextjs.svg
 ---
 
 
