fix: png -> webp

--- a/_posts/Speechsynthesis.mdx
+++ b/_posts/Speechsynthesis.mdx
@@ -3,7 +3,7 @@ title: Speechsynthesis & Google TTS
 date: 2022-01-22
 description: 프로젝트 진행하며 경험해본 Speechsynthesis & Google TTS
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 이번에 유지보수하면서 진행했던 TTS (Text-to-Speech)
