--- a/_posts/audio.mdx
+++ b/_posts/audio.mdx
@@ -3,7 +3,7 @@ title: Audio객체를 이용한 음악 재생
 date: 2023-05-27
 description: Audio객체를 사용한 기업 과제 구현
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 얼마전 기업과제를 진행했다. Audio 객체를 이용한 음악 재생이었다.
