--- a/_posts/browser.mdx
+++ b/_posts/browser.mdx
@@ -3,7 +3,7 @@ title: 브라우저에 url을 검색하면?
 date: 2023-02-25
 description: 사내 스터디
 category: study
-titleImage: /assets/postIcon/javascript.png
+titleImage: /assets/postIcon/javascript.webp
 ---
 
 대기열 → 캐싱 → DNS → 라우팅 → ARP → 초기연결 → 컨텐츠 다운로드 → 브라우저 렌더링
