--- a/_posts/debouce-throttle.mdx
+++ b/_posts/debouce-throttle.mdx
@@ -3,7 +3,7 @@ title: 디바운싱과 쓰로틀링
 date: 2023-05-13
 description: 디바운싱과 쓰로틀링의 차이를 구분하고 hook으로 구현
 category: javaScript
-titleImage: /assets/postIcon/javascript.png
+titleImage: /assets/postIcon/javascript.webp
 ---
 
 ### 디바운싱과 쓰로틀링
