--- a/_posts/intersectionObserver.mdx
+++ b/_posts/intersectionObserver.mdx
@@ -3,7 +3,7 @@ title: IntersectionObserver로 데이터 요청해보기
 date: 2022-05-04
 description: IntersectionObserver를 활용해 스크롤 위치에서 데이터 불러오기
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 프로젝트를 진행하면서, 프로필 페이지에 유저정보와 포인트, 펫정보, 관심사 등 세로로 길게~~배치된 UI, 각각의 정보들을 서버에서 데이터를 하나하나 받아와 보여줘야 했다.
