--- a/_posts/jwt-decode.mdx
+++ b/_posts/jwt-decode.mdx
@@ -3,7 +3,7 @@ title: jwt 토큰 decode 하기
 date: 2023-08-31
 description: jwt 토큰 decode 함수
 category: javaScript
-titleImage: /assets/postIcon/javascript.png
+titleImage: /assets/postIcon/javascript.webp
 ---
 
 JSON 웹 토큰(JWT)
