--- a/_posts/module-system.mdx
+++ b/_posts/module-system.mdx
@@ -3,7 +3,7 @@ title: cjs와 esm
 date: 2024-03-07
 description: rollup으로 번들링하는 과정에서 알게된 cjs와 esm의 차이점에 대해
 category: javaScript
-titleImage: /assets/postIcon/javascript.png
+titleImage: /assets/postIcon/javascript.webp
 ---
 
 최근 rollup으로 패키지를 만드는 과정에서 cjs와 esm에 대해 알게되었다.
