--- a/_posts/react-immutable.mdx
+++ b/_posts/react-immutable.mdx
@@ -3,7 +3,7 @@ title: 리액트에서 불변성을 지키는 이유
 date: 2024-02-25
 description: 리액트에서 불변성을 지키는 이유
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 자바스크립트에서 원시타입(primitive data type)은 변경 불가능한(immutable)한 값이다.
