--- a/_posts/react-testing-2.mdx
+++ b/_posts/react-testing-2.mdx
@@ -3,7 +3,7 @@ title: 리액트 테스팅(2)
 date: 2022-12-14
 description: jest와 react-testing-library
 category: javaScript
-titleImage: /assets/postIcon/test.png
+titleImage: /assets/postIcon/test.webp
 ---
 
 ### * Mock Service Worker
