--- a/_posts/react-testing-4.mdx
+++ b/_posts/react-testing-4.mdx
@@ -3,7 +3,7 @@ title: 리액트 테스팅(4)
 date: 2023-01-02
 description: jest와 react-testing-library
 category: javaScript
-titleImage: /assets/postIcon/test.png
+titleImage: /assets/postIcon/test.webp
 ---
 
 ### Provider 테스팅 해보기
