--- a/_posts/rn-deep-link-2.mdx
+++ b/_posts/rn-deep-link-2.mdx
@@ -3,7 +3,7 @@ title: React Native Deep Linking (2)
 date: 2025-02-03
 description: React Native Deep Linking 연결
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 ### 딥링크
