--- a/_posts/rn-deep-link.mdx
+++ b/_posts/rn-deep-link.mdx
@@ -3,7 +3,7 @@ title: React Native Deep Linking
 date: 2023-10-17
 description: React Native Deep Linking 연결
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 ### 딥링크
