--- a/_posts/storybook.mdx
+++ b/_posts/storybook.mdx
@@ -3,7 +3,7 @@ title: Storybook 써보기
 date: 2022-10-11
 description: 스터디 하면서 처음 써본 Storybook
 category: javaScript
-titleImage: /assets/postIcon/storybook.png
+titleImage: /assets/postIcon/storybook.webp
 ---
 
 이번에 스터디를 하면서 처음 스토리북을 써보게 되었다.
@@ -21,7 +21,7 @@ titleImage: /assets/postIcon/storybook.png
 
 **디자인 시스템이 뭔데?**
 
-<img src="/assets/blog/javaScript/storybook.png" width="100%" alt="post image"/>
+<img src="/assets/blog/javaScript/storybook.webp" width="100%" alt="post image"/>
 
 내가 생각하기에 디자인 시스템이란 하나의 프로덕트를 만드는데 있어서 디자인 적인 가이드 라인 및 디자인 원칙 = 색상, 아이콘, 타이포그래피 등 을 체계적으로 관리하고 문서화하는것 이라 생각한다.
 
