--- a/_posts/tailwindcss.mdx
+++ b/_posts/tailwindcss.mdx
@@ -3,7 +3,7 @@ title: Nextjs에서 tailwind 써보기
 date: 2023-02-18
 description: 공식문서 보면서 tailwind 써보기
 category: javaScript
-titleImage: /assets/postIcon/tailwind-css-icon.png
+titleImage: /assets/postIcon/tailwind-css-icon.webp
 ---
 
 예전에 하다가 중단된 프로젝트를 다시 시작해 보려고 새 레포로 마이그레이션 하는 과정에서
