--- a/_posts/thinking-in-react.mdx
+++ b/_posts/thinking-in-react.mdx
@@ -3,7 +3,7 @@ title: React 처럼 생각하기
 date: 2021-11-20
 description: 리액트 문서 보며 정리
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 [리액트 문서](https://beta.reactjs.org/)를 정독하며 정리한 글
