--- a/_posts/this.mdx
+++ b/_posts/this.mdx
@@ -3,7 +3,7 @@ title: JavaScript this
 date: 2023-02-02
 description: 사내 스터디 this
 category: study
-titleImage: /assets/postIcon/javascript.png
+titleImage: /assets/postIcon/javascript.webp
 ---
 
 자바스크립트의 함수는 호출될 때, 매개변수 이외에 `arguments` 객체와 `this`를 암묵적으로 전달 받는다.
