--- a/_posts/visibilityState.mdx
+++ b/_posts/visibilityState.mdx
@@ -3,7 +3,7 @@ title: document.visibilityState
 date: 2024-12-06
 description: document.visibilityState를 이용한 페이지의 상태를 확인하는 방법
 category: javaScript
-titleImage: /assets/postIcon/javascript.png
+titleImage: /assets/postIcon/javascript.webp
 ---
 
 웹 페이지가 현재 사용자에게 보이는지 아닌지를 확인하는 방법이 있다.
