--- a/_posts/vite-proxy.mdx
+++ b/_posts/vite-proxy.mdx
@@ -3,7 +3,7 @@ title: Vite proxy 설정
 date: 2024-01-18
 description: Vite 로컬환경에서 CORS 문제 해결하기
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 로컬 개발환경에서 API 요청시 CORS 에러로 API 사용이 어려울 수 있습니다.
