--- a/_posts/webview-safe-area.mdx
+++ b/_posts/webview-safe-area.mdx
@@ -3,7 +3,7 @@ title: IOS 웹뷰에서 safe area 설정하기
 date: 2024-07-02
 description: IOS 웹뷰에서 safe area 를 설정하는 방법
 category: javaScript
-titleImage: /assets/postIcon/javascript.png
+titleImage: /assets/postIcon/javascript.webp
 ---
 
 사내 프로젝트를 진행하면서 IOS 웹뷰에서 안전 영역을 설정하는 방법에 대해 알게되었다.
