--- a/_posts/conditional-rendering.mdx
+++ b/_posts/conditional-rendering.mdx
@@ -3,7 +3,7 @@ title: 리액트 조건부 렌더링에 대한 생각
 date: 2022-12-29
 description: 해외 블로그를 보며 정리한 조건부 렌더링에 대한 생각
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 
