--- a/_posts/rn-geolocation.mdx
+++ b/_posts/rn-geolocation.mdx
@@ -3,7 +3,7 @@ title: React Native geolocation
 date: 2023-10-25
 description: React Native 위치정보 받아오기
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 ### React Native geolocation
