--- a/_posts/usecallback-and-usememo.mdx
+++ b/_posts/usecallback-and-usememo.mdx
@@ -3,7 +3,7 @@ title: useCallback, useMemo 무조건 좋은가?
 date: 2022-12-28
 description: useCallback과 useMemo에 대한 생각 정리
 category: javaScript
-titleImage: /assets/postIcon/logo192.png
+titleImage: /assets/postIcon/logo192.webp
 ---
 
 예전부터 궁금했었던 부분이었다.
