fix: 이미지 이름 수정, 포스트 작석중

--- a/_posts/javascript/web-optimization-3.mdx
+++ b/_posts/javascript/web-optimization-3.mdx
@@ -3,7 +3,7 @@ title: 웹성능 최적화(3)
 date: 2022-01-04
 description: 웹성능 최적화3
 category: javaScript
-titleImage: /assets/postIcon/logo192.webp
+titleImage: /assets/postIcon/react.webp
 ---
 
 **[유동균님의 강의](https://www.inflearn.com/course/%EC%9B%B9-%EC%84%B1%EB%8A%A5-%EC%B5%9C%EC%A0%81%ED%99%94-%EB%A6%AC%EC%95%A1%ED%8A%B8-1)를 보며 정리한 글 입니다.**
