--- a/_posts/react/react-parallel-routes.mdx
+++ b/_posts/react/react-parallel-routes.mdx
@@ -3,7 +3,7 @@ title: React Parallel Routes
 date: 2025-04-14
 description: AOS 웹뷰에서 뒤로가기시 모달을 닫으려면?
 category: react
-titleImage: /assets/postIcon/logo192.webp
+titleImage: /assets/postIcon/react.webp
 ---
 
 ### React Parallel Routes와 View Transitions API
