--- a/_posts/react/ref-forwardRef.mdx
+++ b/_posts/react/ref-forwardRef.mdx
@@ -3,7 +3,7 @@ title: 리액트 ref 와 forwardRef (with. react-hook-form)
 date: 2022-02-09
 description: react-hook-form 라이브러리와 ref의 동작
 category: react
-titleImage: /assets/postIcon/logo192.webp
+titleImage: /assets/postIcon/react.webp
 ---
 
 
