--- a/_posts/react/thinking-in-react-2.mdx
+++ b/_posts/react/thinking-in-react-2.mdx
@@ -3,7 +3,7 @@ title: React 처럼 생각하기(2)
 date: 2021-12-12
 description: 리액트 문서 보며 정리
 category: react
-titleImage: /assets/postIcon/logo192.webp
+titleImage: /assets/postIcon/react.webp
 ---
 
 # 렌더링 최적화
