--- a/_posts/javascript/web-optimization-2.mdx
+++ b/_posts/javascript/web-optimization-2.mdx
@@ -3,7 +3,7 @@ title: 웹성능 최적화(2)
 date: 2022-01-03
 description: 웹성능 최적화2
 category: javaScript
-titleImage: /assets/postIcon/logo192.webp
+titleImage: /assets/postIcon/react.webp
 ---
 
 **[유동균님의 강의](https://inf.run/4zeg)를 보며 정리한 글 입니다.**
