--- a/_posts/react/rn-deep-link-2.mdx
+++ b/_posts/react/rn-deep-link-2.mdx
@@ -3,7 +3,7 @@ title: React Native Deep Linking (2)
 date: 2025-02-03
 description: React Native Deep Linking 연결
 category: react
-titleImage: /assets/postIcon/logo192.webp
+titleImage: /assets/postIcon/react.webp
 ---
 
 ### 딥링크
