--- a/_posts/react/rn-deep-link.mdx
+++ b/_posts/react/rn-deep-link.mdx
@@ -3,7 +3,7 @@ title: React Native Deep Linking
 date: 2023-10-17
 description: React Native Deep Linking 연결
 category: react
-titleImage: /assets/postIcon/logo192.webp
+titleImage: /assets/postIcon/react.webp
 ---
 
 ### 딥링크
