--- a/_posts/javascript/event-loop-set-timeout.mdx
+++ b/_posts/javascript/event-loop-set-timeout.mdx
@@ -197,6 +197,7 @@ worker.onmessage = (e) => {
 
 ---
 
+## 마치며
 자바스크립트의 이벤트 루프에 대해서 이해하고 있는 것이 비동기 작업을 처리하는데 큰 도움이 될것같다.
 특히 이러한 작업들이 어떻게 우선순위를 가지는지, 그리고 setTimeout과 같은 타이머 함수들이 어떻게 동작하는지 이해하는것이 중요하다.
 setTImeout과 setInterval은 자바스크립트에서 비동기 작업을 처리고 타이머로 사용할 수 있지만, 이벤트 루프의 특성상 정확한 타이밍을 보장하지는 않는다.
